1. Define questionnaire related domain classes and repository interfaces. 2. Initialize database with sample data. 3. Showcase the repository tests, emphasizing that tests are transactional and rollback at the end of each test.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
+# Default database configuration
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.username=sa
+# spring.datasource.password=
+
 # Allow Thymeleaf templates to be reloaded at dev time
 spring.thymeleaf.cache=false
+# Let Hibernate output the executed sql statements, like insert into ... or select ...
+logging.level.org.hibernate.SQL=debug
