Add basic security (only one in-memory user)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,7 @@
 
 # Allow Thymeleaf templates to be reloaded at dev time
 spring.thymeleaf.cache=false
+security.basic.enabled=false
 # Let Hibernate output the executed sql statements, like insert into ... or select ...
-logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.security=INFO
